[gd_scene load_steps=17 format=3 uid="uid://c2ya1y17iitaa"]

[ext_resource type="PackedScene" uid="uid://qm1i7vlp01r5" path="res://Environment/Island0/Terrain/IslandAssets/hut/hut_assets/Door/Door.glb" id="1_4jsjm"]
[ext_resource type="Texture2D" uid="uid://dtshm63eeedng" path="res://Environment/Island0/Terrain/IslandAssets/hut/hut_assets/Door/T端r_BaseColor.png" id="2_4nmdi"]
[ext_resource type="Script" path="res://Environment/Island0/Terrain/IslandAssets/hut/hut_assets/Door/DoorHut.gd" id="2_v4yr3"]
[ext_resource type="Texture2D" uid="uid://dyt2qrs1p2jc" path="res://Environment/Island0/Terrain/IslandAssets/hut/hut_assets/Door/T端r_Metallic.png" id="3_7gi6v"]
[ext_resource type="Texture2D" uid="uid://d14swsmig0m3u" path="res://Environment/Island0/Terrain/IslandAssets/hut/hut_assets/Door/T端r_Normal.png" id="4_bbtc8"]
[ext_resource type="Texture2D" uid="uid://cejnrq4ec3sb6" path="res://Environment/Island0/Terrain/IslandAssets/hut/hut_assets/Door/T端r_Roughness.png" id="5_3u0tr"]
[ext_resource type="PackedScene" uid="uid://bi8ebqsm3obsa" path="res://InteractableSystem/Interactable.tscn" id="6_pjdyc"]
[ext_resource type="AudioStream" uid="uid://b06jsqonfvyy8" path="res://Sound/Props/Door/wooden_door_open.wav" id="8_3wplb"]
[ext_resource type="AudioStream" uid="uid://djoa3juh8i6ch" path="res://Sound/Props/Door/wooden_door_close.wav" id="9_4apfw"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ocmr6"]
albedo_texture = ExtResource("2_4nmdi")
metallic = 1.0
metallic_texture = ExtResource("3_7gi6v")
roughness_texture = ExtResource("5_3u0tr")
normal_enabled = true
normal_texture = ExtResource("4_bbtc8")

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_x7cfk"]
data = PackedVector3Array(-1.1947, -0.004, 1.9999, -1.1947, 1.9935, 0, -1.1947, 1.9935, 1.9999, -1.1947, -0.004, 1.9999, -1.1947, -0.004, 0, -1.1947, 1.9935, 0, -1.1947, -0.004, 0, 0.8053, 1.9935, 0, -1.1947, 1.9935, 0, -1.1947, -0.004, 0, 0.8053, -0.004, 0, 0.8053, 1.9935, 0, 0.8053, -0.004, 0, 0.8053, 1.9935, 1.9999, 0.8053, 1.9935, 0, 0.8053, -0.004, 0, 0.8053, -0.004, 1.9999, 0.8053, 1.9935, 1.9999, 0.8053, -0.004, 1.9999, -1.1947, 1.9935, 1.9999, 0.8053, 1.9935, 1.9999, 0.8053, -0.004, 1.9999, -1.1947, -0.004, 1.9999, -1.1947, 1.9935, 1.9999, -1.1947, -0.004, 0, 0.8053, -0.004, 1.9999, 0.8053, -0.004, 0, -1.1947, -0.004, 0, -1.1947, -0.004, 1.9999, 0.8053, -0.004, 1.9999, 0.8053, 1.9935, 0, -1.1947, 1.9935, 1.9999, -1.1947, 1.9935, 0, 0.8053, 1.9935, 0, 0.8053, 1.9935, 1.9999, -1.1947, 1.9935, 1.9999)

[sub_resource type="Animation" id="Animation_ovuwb"]
resource_name = "CloseDoor"
length = 4.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Door/Cube_005:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3.9, 4.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 1.5708, 0), Vector3(0, -0.0872665, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_p3l0d"]
resource_name = "OpenDoor"
length = 2.89
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Door/Cube_005:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.6, 2.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 1.74533, 0), Vector3(0, 1.5708, 0)]
}

[sub_resource type="Animation" id="Animation_a05hb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Door/Cube_005:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ulpod"]
_data = {
"CloseDoor": SubResource("Animation_ovuwb"),
"OpenDoor": SubResource("Animation_p3l0d"),
"RESET": SubResource("Animation_a05hb")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_uwude"]
size = Vector3(0.362576, 2.14636, 1.59448)

[node name="Door" type="Node3D"]

[node name="Door" parent="." node_paths=PackedStringArray("animation_player") instance=ExtResource("1_4jsjm")]
script = ExtResource("2_v4yr3")
animation_player = NodePath("../AnimationPlayer")

[node name="Cube_005" parent="Door" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_ocmr6")

[node name="StaticBody3D" type="StaticBody3D" parent="Door/Cube_005" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Door/Cube_005/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_x7cfk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ulpod")
}

[node name="Interactable" parent="." node_paths=PackedStringArray("interaction_shape") instance=ExtResource("6_pjdyc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.61472, 0.329952, -1.48215)
interaction_shape = NodePath("CollisionShape3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Interactable"]
transform = Transform3D(1, 0, -3.55271e-15, 0, 1, 0, 3.55271e-15, 0, 1, 0.194759, 0.762681, 0.280567)
shape = SubResource("BoxShape3D_uwude")

[node name="DoorOpen" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("8_3wplb")
volume_db = -15.0
bus = &"Environment"

[node name="DoorClose" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("9_4apfw")
volume_db = -15.0
bus = &"Environment"

[connection signal="interact" from="Interactable" to="Door" method="_on_interactable_interact"]

[editable path="Door"]
